Infra-project-shubham-bhaiya/aws-modules/my-subnets.tf
resource "aws_subnet" "aws_jhooq_public_subnets" {
  count      = length(var.cidr_public_subnet)
  vpc_id     = aws_vpc.my-vpc.id
  cidr_block = element(var.cidr_public_subnet, count.index)
  availability_zone = element(var.us_availability_zone, count.index)

  tags = {
    Name = "Subnet-Public : Public Subnet ${count.index + 1}"
  }
}
resource "aws_subnet" "aws_jhooq_private_subnets" {
  count      = length(var.cidr_private_subnet)
  vpc_id     = aws_vpc.my-vpc.id
  cidr_block = element(var.cidr_private_subnet, count.index)
  availability_zone = element(var.us_availability_zone, count.index)

  tags = {
    Name = "Subnet-Private : Private Subnet ${count.index + 1}"
  }
}
